Ajuste na ordenação da lista, implementacao utils

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,8 @@
 				"-o",
 				"${fileDirname}\\${fileBasenameNoExtension}.exe",
 				"lista.c",
-				"fila.c"
+				"fila.c",
+				"utils.c"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
